==> aguegu/stm8demos/stm8l152c6t6mini/SPI_RF24/RF24.c <==

void csn(bool mode) {
  GPIO_WriteBit(gpio_csn, pin_csn, mode);
}

void ce(bool val) {
	GPIO_WriteBit(pgio_ce, pin_ce, val);
}

u8 write_payload(const void* buf, u8 data_len, const u8 writeType) {
  u8 status, blank_len;
  const u8* current = reinterpret_cast<const u8*>(buf);

  data_len = rf24_min(data_len, payload_size);
  blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  // IF_SERIAL_DEBUG( printf("[Writing %u bytes %u blanks]\n",data_len,blank_len); );

  beginTransaction();
  status = spi_transfer(writeType);

  spi_transfer_n(current, data_len);
  while (blank_len--) {
    spi_transfer(0);
  }
  endTransaction();

  return status;
}
